<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raven Balance</string>
    <string name="unknown_bal_text">$???</string>
    <string name="update_bal_btn_text">Refresh Balance</string>
    <string name="student_num_label_text">MyCarletonOne Username: </string>
    <string name="student_pin_label_text">Password: </string>
    <string name="save_prefs_btn_text">Save</string>
    <string name="refresh_checkbox_label_text">Refresh Balance automatically when app is launched</string>
    <string name="updated_at_text">Last Updated: Never</string>
    <string name="cancel_prefs_btn_text">Cancel</string>
    <string name="widget_update_btn_text">Update</string>
    <string name="widget_logo_contentdescription">Application Logo</string>
    <string name="widget_last_up_title">Last up:</string>
    <string name="unknown_last_up">"???"</string>
    <string name="widget_label">Raven Balance</string>

</resources>